# 2ppy

./: .flake8  .gitignore  MANIFEST.in  README.md  download-jars.sh  main.py  pom.xml  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  quick-check.yml
root_package/sub_package/: __init__.py  class_module.py
test/: post_install_test.py  test_example.py  test_interfaces.py  test_terms.py
test/api/: test_prolog.py
test/core/: test_formatters.py  test_kt_math.py  test_operators.py  test_scope.py  test_substitution.py  test_terms.py  test_try_except.py  test_unify.py  test_visitors.py
test/core/operators/: test_operator_sets.py  test_operators.py  test_specifiers.py
test/solve/: test_prolog_with_resolution.py
test/solve/problog/: problog_example.py  test_problog_example.py  test_problog_parsing.py
test/solve/prolog/: test_prolog.py  test_prolog_parsing.py  test_thermostat_agent.py  thermostat.pl
test/theory/: test_theory.py
test/unify/: test_unify.py
tuprolog/: __init__.py  __main__.py  _ktutils.py  core.py  jvmioutils.py  jvmutils.py  pyutils.py  solve.py  unify.py
tuprolog/core/: __init__.py  _adapters.py  _api.py  _definitions.py  _ktadapt.py  _ktmath.py  comparators.py  exception.py  formatters.py  impl.py  operators.py  parsing.py  visitors.py
tuprolog/core/exception/: __init__.py  _ktadapt.py
tuprolog/core/operators/: __init__.py  _api.py  _definitions.py  _ktadapt.py
tuprolog/core/parsing/: __init__.py  _adapters.py  _api.py  _definitions.py  _ktadapt.py
tuprolog/dsl/: __init__.py  core.py
tuprolog/libs/: __init__.py  java.py
tuprolog/math/: _api.py  _definitions.py
tuprolog/repl/: _definitions.py  problog.py  prolog.py
tuprolog/solve/: __init__.py  _adapters.py  _api.py  _definitions.py  _ktadapt.py
tuprolog/solve/channel/: __init__.py  _api.py  _definitions.py
tuprolog/solve/classic/: __init__.py
tuprolog/solve/data/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/: __init__.py  _definitions.py  _ktadapt.py
tuprolog/solve/exception/error/: __init__.py  _ktadapt.py
tuprolog/solve/exception/error/domain/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/error/evaluation/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/error/existence/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/error/instantiation/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/error/message/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/error/permission/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/error/representation/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/error/syntax/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/error/system/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/error/type/: __init__.py  _api.py  _definitions.py
tuprolog/solve/exception/warning/: __init__.py  _api.py  _definitions.py  _ktadapt.py
tuprolog/solve/flags/: __init__.py  _adapters.py  _api.py  _definitions.py
tuprolog/solve/function/: __init__.py  _api.py  _definitions.py
tuprolog/solve/plp/: __init__.py  _api.py  _definitions.py
tuprolog/solve/primitive/: __init__.py  _adapters.py  _api.py  _definitions.py
tuprolog/solve/problog/: __init__.py  _api.py  _definitions.py  operators.py
tuprolog/solve/prolog/: __init__.py  _api.py  _definitions.py
tuprolog/solve/sideffcts/: __init__.py
tuprolog/solve/sideffects/: _api.py  _definitions.py
tuprolog/solve/stdlib/: __init__.py  _definitions.py  function.py  magic.py  primitive.py  rule.py
tuprolog/solve/stdlib/function/: __init__.py
tuprolog/solve/stdlib/primitive/: __init__.py
tuprolog/solve/stdlib/rule/: __init__.py
tuprolog/theory/: __init__.py  _adapters.py  _api.py  _definitions.py  _ktadapt.py  parsing.py
tuprolog/theory/parsing/: __init__.py  _api.py  _definitions.py  _ktadapt.py
tuprolog/unify/: __init__.py  _api.py  _definitions.py  _ktadapt.py  exception.py
tuprolog/unify/exception/: __init__.py  _ktadapt.py
tuprolog/utils/: __init__.py  _definitions.py  _ktadapt.py
