[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-git-versioning<2", "install-jdk<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
dynamic = ["version"]
name = "2ppy"
authors = [
  { name="Giovanni Ciatto", email="giovanni.ciatto@unibo.it" },
]
description = "Python-based implementation of tuProlog -- the open ecosystem for symbolic AI --, based on 2P-Kt"
readme = "README.md"
requires-python = ">=3.6, <4"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Prolog",
]
license = {file = "LICENSE"}
keywords = ["prolog", "symbolic ai", "ecosystem", "tuprolog", "2p", "python"]
dependencies = [
  "JPype1~=1.4.1",
]

[project.urls]
"Homepage" = "https://github.com/tuProlog/2ppy"
"Bug Reports" = "https://github.com/tuProlog/2ppy/issues"
"Source" = "https://github.com/tuProlog/2ppy"
