[metadata]
name = py2p
version = 0.1.4
author = Giovanni Ciatto
author_email = giovanni.ciatto@unibo.it
description = Python-based implementation of tuProlog -- the open ecosystem for symbolic AI --, based on 2P-Kt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tuProlog/2Py
keywords = prolog, symbolic ai, ecosystem, tuprolog, 2p, python
license = Apache 2.0 License
license_files = 
    LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Prolog
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
include_package_data = True
# package_dir=
#     =src
packages = 
    find:
scripts =
    main.py
install_requires =
    JPype1 == 1.3.0

# [options.packages.find]
# where=src
# exclude =
#     test.*

# [options.package_data]
# libs = '*.jar'
